# GitHub-Repository-Optimizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  main.py
app/.adk/: session.db
app/agents/: __init__.py  coordinator_agent.py  documentation_agent.py  repository_agent.py
app/config/: __init__.py  settings.py
app/guardrails/: __init__.py  input_policy.py  secret_redaction.py
app/prompts/: __init__.py  coordinator_prompt.py  documentation_prompt.py  repository_prompt.py
app/schemas/: __init__.py  analysis.py
app/services/: __init__.py  analysis_service.py  report_service.py  repository_context_service.py
app/tools/: __init__.py  github_tool.py  unified_analysis_tool.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md
github_repository_optimizer_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
github_repository_optimizer_agent.egg-info/.adk/: session.db
scripts/: analyze_repository.py
tests/: test_analysis_service.py  test_report_service.py  test_repository_context_service.py  test_unified_analysis_tool.py
ui/: __init__.py  streamlit_app.py
