[project]
name = "github-repository-optimizer-agent"
version = "0.1.0"
description = "GitHub Repository Optimizer Agent"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=2.3.0,<3.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["app"]